--- a/profile.html
+++ b/profile.html
@@ -10,8 +10,7 @@
    	   <h1>profile</h1>
    	   
 	  <div class="a">
-   	   	 <a href="page.html" class="btn-flat-simple">
- 		 <i class="fa fa-caret-right"></i> top</a>
+   	   	 <a href="https://yuujiogawa0109.github.io/github/"> top</a>
  		 		<ul>
    			<li>相模原市立相模丘中学校卒業</li>
 			<li>神奈川県立橋本高等学校卒業</li>
