--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <meta charset="utf-8">
     <title>自己紹介</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8">
+    
+  </script>
+
   </head>
   <body>
   	<header>
@@ -58,5 +62,8 @@
     <div class="end">
       <h1>Thank You <br>For<br>Reading Mypage</h1>
     </div>
+      <script src="js.js">
+    
+  </script>
   </body>
 </html>
